[project]
name = "hospital-policy-rag-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-faiss>=0.1.1",
    "langchain-groq>=1.1.2",
    "notebook>=7.5.5",
    "streamlit>=1.56.0",
]
